add cart navigation link to courses page

--- a/frontend/courses.html
+++ b/frontend/courses.html
@@ -64,7 +64,7 @@
             </li>
             <li>
               <a
-                href="#about"
+                href="cart.html"
                 class="text-gray-700 hover:text-blue-600 transition-colors duration-300"
                 >Cart</a
               >
