--- a/frontend/courses.html
+++ b/frontend/courses.html
@@ -101,14 +101,9 @@
             >Courses</a
           >
           <a
-            href="#about"
+            href="cart.html"
             class="block text-gray-700 hover:text-blue-600 transition-colors duration-300"
-            >About</a
-          >
-          <a
-            href="#contact"
-            class="block text-gray-700 hover:text-blue-600 transition-colors duration-300"
-            >Contact</a
+            >Cart</a
           >
           <div class="flex flex-col space-y-2 pt-2">
             <a
