--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,107 +32,100 @@
     <!-- Header -->
     <header class="fixed w-full bg-white shadow-lg z-50">
       <nav class="container mx-auto px-6 py-4">
-      <div class="flex items-center justify-between">
-        <div class="text-2xl font-bold text-blue-600 float-animation">
-        SchoolPlus
+        <div class="flex items-center justify-between">
+          <div class="text-2xl font-bold text-blue-600 float-animation">
+            SchoolPlus
+          </div>
+          <!-- Hamburger Button (Mobile) -->
+          <button
+            id="mobile-menu-button"
+            class="md:hidden text-3xl text-blue-600 focus:outline-none"
+            aria-label="Open main menu"
+          >
+            <i class="fas fa-bars"></i>
+          </button>
+          <!-- Desktop Menu -->
+          <ul class="hidden md:flex space-x-8">
+            <li>
+              <a
+                href="index.html"
+                class="text-gray-700 hover:text-blue-600 transition-colors duration-300"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a
+                href="courses.html"
+                class="text-gray-700 hover:text-blue-600 transition-colors duration-300"
+                >Courses</a
+              >
+            </li>
+            <li>
+              <a
+                href="cart.html"
+                class="text-gray-700 hover:text-blue-600 transition-colors duration-300"
+                >Cart</a
+              >
+            </li>
+          </ul>
+          <div class="space-x-4 hidden md:block">
+            <a
+              href="login.html"
+              class="px-6 py-2 text-blue-600 border-2 border-blue-600 rounded-full hover:bg-blue-50 transition-all duration-300"
+            >
+              Login
+            </a>
+            <a
+              href="register.html"
+              class="px-6 py-2 bg-blue-600 text-white rounded-full hover:bg-blue-700 transition-all duration-300 hover:shadow-lg"
+            >
+              Sign Up
+            </a>
+          </div>
         </div>
-        <!-- Hamburger Button (Mobile) -->
-        <button
-        id="mobile-menu-button"
-        class="md:hidden text-3xl text-blue-600 focus:outline-none"
-        aria-label="Open main menu"
+        <!-- Mobile Menu -->
+        <div
+          id="mobile-menu"
+          class="md:hidden hidden flex-col space-y-4 mt-4 bg-white rounded-xl shadow-lg px-6 py-4"
         >
-        <i class="fas fa-bars"></i>
-        </button>
-        <!-- Desktop Menu -->
-        <ul class="hidden md:flex space-x-8">
-        <li>
           <a
-          href="index.html"
-          class="text-gray-700 hover:text-blue-600 transition-colors duration-300"
-          >Home</a
+            href="index.html"
+            class="block text-gray-700 hover:text-blue-600 transition-colors duration-300"
+            >Home</a
           >
-        </li>
-        <li>
           <a
-          href="courses.html"
-          class="text-gray-700 hover:text-blue-600 transition-colors duration-300"
-          >Courses</a
+            href="courses.html"
+            class="block text-gray-700 hover:text-blue-600 transition-colors duration-300"
+            >Courses</a
           >
-        </li>
-        <li>
           <a
-          href="#about"
-          class="text-gray-700 hover:text-blue-600 transition-colors duration-300"
-          >About</a
+            href="cart.html"
+            class="block text-gray-700 hover:text-blue-600 transition-colors duration-300"
+            >Cart</a
           >
-        </li>
-        <li>
-          <a
-          href="#contact"
-          class="text-gray-700 hover:text-blue-600 transition-colors duration-300"
-          >Contact</a
-          >
-        </li>
-        </ul>
-        <div class="space-x-4 hidden md:block">
-        <a
-          href="login.html"
-          class="px-6 py-2 text-blue-600 border-2 border-blue-600 rounded-full hover:bg-blue-50 transition-all duration-300"
-        >
-          Login
-        </a>
-        <a
-          href="register.html"
-          class="px-6 py-2 bg-blue-600 text-white rounded-full hover:bg-blue-700 transition-all duration-300 hover:shadow-lg"
-        >
-          Sign Up
-        </a>
+          <div class="flex flex-col space-y-2 pt-2">
+            <a
+              href="login.html"
+              class="px-6 py-2 text-blue-600 border-2 border-blue-600 rounded-full hover:bg-blue-50 transition-all duration-300 text-center"
+            >
+              Login
+            </a>
+            <a
+              href="register.html"
+              class="px-6 py-2 bg-blue-600 text-white rounded-full hover:bg-blue-700 transition-all duration-300 hover:shadow-lg text-center"
+            >
+              Sign Up
+            </a>
+          </div>
         </div>
-      </div>
-      <!-- Mobile Menu -->
-      <div
-        id="mobile-menu"
-        class="md:hidden hidden flex-col space-y-4 mt-4 bg-white rounded-xl shadow-lg px-6 py-4"
-      >
-        <a
-        href="index.html"
-        class="block text-gray-700 hover:text-blue-600 transition-colors duration-300"
-        >Home</a
-        >
-        <a
-        href="courses.html"
-        class="block text-gray-700 hover:text-blue-600 transition-colors duration-300"
-        >Courses</a
-        >
-        <a
-        href="cart.html"
-        class="block text-gray-700 hover:text-blue-600 transition-colors duration-300"
-        >Cart</a
-        >
-        <div class="flex flex-col space-y-2 pt-2">
-        <a
-          href="login.html"
-          class="px-6 py-2 text-blue-600 border-2 border-blue-600 rounded-full hover:bg-blue-50 transition-all duration-300 text-center"
-        >
-          Login
-        </a>
-        <a
-          href="register.html"
-          class="px-6 py-2 bg-blue-600 text-white rounded-full hover:bg-blue-700 transition-all duration-300 hover:shadow-lg text-center"
-        >
-          Sign Up
-        </a>
-        </div>
-      </div>
       </nav>
       <script>
-      // Hamburger menu toggle
-      const menuBtn = document.getElementById('mobile-menu-button');
-      const mobileMenu = document.getElementById('mobile-menu');
-      menuBtn.addEventListener('click', () => {
-        mobileMenu.classList.toggle('hidden');
-      });
+        // Hamburger menu toggle
+        const menuBtn = document.getElementById("mobile-menu-button");
+        const mobileMenu = document.getElementById("mobile-menu");
+        menuBtn.addEventListener("click", () => {
+          mobileMenu.classList.toggle("hidden");
+        });
       </script>
     </header>
 
